--- a/styles/globals.css
+++ b/styles/globals.css
@@ -16,3 +16,51 @@
 .toggle-checkbox:checked + .toggle-label {
   background-color: rgb(76 73 188);
 }
+
+
+@layer base {
+   .btn-pri {
+     @apply text-gray-800 bg-yellow-300 focus:outline-none hover:shadow-lg hover:bg-yellow-400 rounded-full transition-colors duration-150;
+   }
+ 
+   .btn-sec {
+     @apply text-white bg-yellow-400 focus:outline-none hover:shadow-lg hover:bg-yellow-500 rounded-full transition-colors duration-150;
+   }
+ 
+   .btn-ter {
+     @apply text-gray-700 bg-yellow-50  focus:outline-none hover:shadow-lg hover:bg-yellow-100 rounded-full transition-colors duration-150;
+   }
+ 
+   .btn-las {
+     @apply text-gray-700 bg-transparent border hover:shadow-lg border-gray-300 focus:outline-none hover:bg-yellow-100 rounded-full transition-colors duration-150;
+   }
+ 
+   .form-card {
+     @apply w-full max-w-md p-10 m-auto bg-gray-50 rounded-2xl shadow-2xl;
+   }
+ 
+   .link-scale {
+     @apply transform-gpu transition hover:scale-105 duration-150 ease-in-out;
+   }
+   .required:after {
+     content: " *";
+     color: red;
+   }
+ 
+   .input-field {
+     @apply w-full px-4 py-2.5 text-gray-700 bg-white border border-gray-300 rounded-full focus:border-blue-500 focus:outline-none focus:ring;
+   }
+ 
+   .text-title {
+     @apply text-2xl sm:text-3xl md:text-4xl lg:text-5xl font-semibold text-gray-800;
+   }
+ 
+   .text-subtitle {
+     @apply text-xl sm:text-2xl md:text-3xl lg:text-4xl font-semibold text-gray-800;
+   }
+ 
+   .wrapper {
+     @apply container mx-auto px-2 sm:px-3 md:px-5 lg:px-7 xl:px-9 py-4 sm:py-6 md:py-9 lg:py-12 xl:py-16;
+   }
+ }
+ 
