--- a/styles/globals.css
+++ b/styles/globals.css
@@ -31,7 +31,7 @@
   }
 
   .btn-las {
-    @apply text-gray-700 bg-transparent border hover:shadow-lg border-gray-300 focus:outline-none hover:bg-yellow-100 rounded-full transition-colors duration-150;
+    @apply bg-transparent border hover:shadow-lg border-gray-400 focus:outline-none rounded-full transition-colors duration-150;
   }
 
   .form-card {
@@ -47,7 +47,7 @@
   }
 
   .input-field {
-    @apply w-full px-4 py-2.5 text-gray-700 bg-white border border-gray-300 rounded-full focus:border-blue-500 focus:outline-none focus:ring;
+    @apply px-3 py-2 text-gray-700 bg-gray-100 border border-gray-400 rounded-full focus:border-blue-500 focus:outline-none focus:ring;
   }
 
   .text-title {
