--- a/styles/globals.css
+++ b/styles/globals.css
@@ -19,11 +19,11 @@
 
 @layer base {
   .btn-pri {
-    @apply text-gray-800 bg-yellow-300 focus:outline-none hover:shadow-lg hover:bg-yellow-400 rounded-full transition-colors duration-150;
+    @apply text-gray-800 dark:text-gray-50 bg-blue-300 dark:bg-d3 hover:bg-blue-400 dark:hover:bg-d1 focus:outline-none hover:shadow-lg rounded-full transition-colors duration-150;
   }
 
   .btn-sec {
-    @apply dark-sidebar focus:outline-none hover:shadow-lg rounded-full transition-colors duration-150;
+    @apply text-gray-800 dark:text-gray-50 bg-blue-400 dark:bg-d2 hover:bg-blue-500 dark:hover:bg-d3 focus:outline-none hover:shadow-lg rounded-full transition-colors duration-150;
   }
 
   .btn-ter {
