--- a/styles/globals.css
+++ b/styles/globals.css
@@ -51,7 +51,7 @@
   }
 
   .input-field-sm {
-    @apply  px-3 py-2 text-gray-700 bg-gray-100 border border-gray-400 rounded-full focus:border-blue-500 focus:outline-none focus:ring;
+    @apply px-3 py-2 text-gray-700 bg-gray-100 border border-gray-400 rounded-full focus:border-blue-500 focus:outline-none focus:ring;
   }
 
   .text-title {
@@ -82,12 +82,19 @@
     @apply dark:text-gray-100 dark:bg-d2 bg-white text-gray-800 shadow-md;
   }
 
-
   .dark-modal {
     @apply dark:text-gray-100 dark:bg-d2 bg-gray-200 text-gray-800 shadow-md;
   }
 
   .dark-link {
     @apply text-gray-100 bg-transparent hover:bg-gray-700 focus:outline-none focus:ring;
+  }
+
+  .rdt_Table {
+    @apply dark:text-gray-100 dark:bg-d2 bg-white text-gray-800 shadow-md;
+  }
+
+  .dataTables_wrapper .rdt_TableCell {
+    font-size: 25px;
   }
 }
