feat: new style

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -19,15 +19,15 @@
 
 @layer base {
   .btn-pri {
-    @apply text-gray-800 dark:text-gray-50 bg-blue-300 dark:bg-d3 hover:bg-blue-400 dark:hover:bg-d1 focus:outline-none hover:shadow-lg rounded-full transition-colors duration-150;
+    @apply text-gray-800 dark:text-gray-50 bg-blue-300 dark:bg-d3 hover:bg-blue-400 dark:hover:bg-d1 focus:outline-none hover:shadow-lg rounded-xl transition-colors duration-150;
   }
 
   .btn-sec {
-    @apply text-gray-800 dark:text-gray-50 bg-gray-300 dark:bg-d2 hover:bg-blue-200 dark:hover:bg-d3 focus:outline-none hover:shadow-lg rounded-full transition-colors duration-150;
+    @apply text-gray-800 dark:text-gray-50 bg-gray-300 dark:bg-d2 hover:bg-blue-200 dark:hover:bg-d3 focus:outline-none hover:shadow-lg rounded-xl transition-colors duration-150;
   }
 
   .btn-ter {
-    @apply text-gray-700 bg-yellow-50  focus:outline-none hover:shadow-lg hover:bg-yellow-100 rounded-full transition-colors duration-150;
+    @apply text-gray-700 bg-yellow-50  focus:outline-none hover:shadow-lg hover:bg-yellow-100 rounded-xl transition-colors duration-150;
   }
 
   .btn-las {
