feat: show keyword

--- a/components/laporan/table.css
+++ b/components/laporan/table.css
@@ -4,5 +4,6 @@
    color: #002b36;
    color: #cb4b16;
    color: #073642;
-   color : rgba(29, 28, 28, 0.753)
+   color : rgba(29, 28, 28, 0.753);
+   color: #adb1b4;
 }
